# AI-Investment-Demo

./: .gitignore  README.md  docker-compose.yml  start.sh
.github/workflows/: local-checks.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/ai_skills/: __init__.py  berkshire_skills.py
backend/app/api/: admin.py  ai_assistant.py  assets.py  auth.py  dashboard.py  journal.py  market.py  portfolio.py  users.py  watchlist.py
backend/app/core/: config.py  schemas.py  security.py
backend/app/data/: seed_data.py
backend/app/models/: database.py  models.py
backend/app/services/: ai_service.py  market_service.py  portfolio_service.py
backend/app/utils/: financial_rigor.py
backend/tests/: test_market_service.py
docs/: GITHUB_SYNC.md  LOCAL_PERSONAL_DEPLOY.md  PRODUCT_OPTIMIZATION_ROADMAP.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/ai-assistant/: page.tsx
frontend/src/app/assets/: page.tsx
frontend/src/app/journal/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AIChat.tsx  Layout.tsx  MarketCard.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
scripts/: backup_db.sh  init_local.sh  local_services.sh  restore_db.sh  run_backend.sh  run_frontend.sh
(+1 files in other folders)
