[tool.poetry]
name = "ai-berkshire-backend"
version = "0.1.0"
description = "AI Investment Research & Daily Review System Backend"
authors = ["AI Berkshire Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pypdf = "^4.0.0"
python-docx = "^1.1.0"
markdown = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
